force-app/main/default/objects/Medical_Event__c/Medical_Event__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por gerenciar eventos médicos, incluindo detalhes operacionais, participantes e logística.</description>
    <label>Evento Médico</label>
    <nameField>
        <displayFormat>EVT-{0000}</displayFormat>
        <label>N° do Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos Médicos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>