force-app/main/default/objects/Medical_Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Data e hora de término do evento.</description>
    <inlineHelpText>Informe quando o evento será finalizado.</inlineHelpText>
    <label>Data/Hora de Término</label>
    <type>DateTime</type>
</CustomField>