force-app/main/default/objects/Medical_Event__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <description>Armazena informações detalhadas sobre o evento médico, incluindo agenda, procedimentos, requisitos, observações e notas adicionais.</description>
    <inlineHelpText>Insira informações detalhadas sobre o evento, como objetivos, instruções, cronograma, requisitos ou quaisquer observações adicionais para os participantes.</inlineHelpText>
    <label>Detalhes do Evento</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>