force-app/main/default/objects/Medical_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Define o formato do evento.</description>
    <inlineHelpText>Selecione se o evento será presencial (In-Person) ou virtual.</inlineHelpText>
    <label>Tipo do Evento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
                <label>Presencial</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>