force-app/main/default/objects/Medical_Event__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Define a frequência de repetição do evento.</description>
    <inlineHelpText>Selecione a frequência (ex.: Daily ou Weekly) caso o evento seja recorrente.</inlineHelpText>
    <label>Frequência</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <label>Diária</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <label>Semanal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>