force-app/main/default/objects/Medical_Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o evento está ativo no momento.</description>
    <inlineHelpText>Marque se o evento estiver ocorrendo atualmente.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>