force-app/main/default/objects/Medical_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referência ao local onde o evento será realizado.</description>
    <inlineHelpText>Selecione o local do evento.</inlineHelpText>
    <label>Localização</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Eventos Médicos</relationshipLabel>
    <relationshipName>Medical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>