force-app/main/default/objects/Medical_Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>Indica se o local do evento foi verificado.</description>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo calculado automaticamente com base na verificação do local.</inlineHelpText>
    <label>Local Verificado</label>
    <type>Checkbox</type>
</CustomField>