force-app/main/default/objects/Medical_Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Número máximo de participantes permitidos no evento.</description>
    <inlineHelpText>Defina o limite total de vagas disponíveis.</inlineHelpText>
    <label>Vagas Máximas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>