force-app/main/default/objects/Medical_Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nome descritivo do evento médico.</description>
    <inlineHelpText>Informe um nome claro para facilitar a identificação do evento.</inlineHelpText>
    <label>Nome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>