force-app/main/default/objects/Medical_Event__c/fields/Organizers__c.field-meta.xml
<CustomField>
    <fullName>Organizers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referência ao organizador responsável pelo evento.</description>
    <inlineHelpText>Selecione o organizador responsável pela criação e gestão do evento.</inlineHelpText>
    <label>Organizador</label>
    <referenceTo>Clinic_Organizer__c</referenceTo>
    <relationshipLabel>Eventos Médicos</relationshipLabel>
    <relationshipName>Medical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>