force-app/main/default/objects/Medical_Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <description>Quantidade total de participantes confirmados no evento.</description>
    <inlineHelpText>Mostra automaticamente o número de participantes vinculados ao evento.</inlineHelpText>
    <label>Nº de Participantes</label>
    <summaryForeignKey>Event_Attendee__c.Medical_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>