force-app/main/default/objects/Medical_Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o evento ocorre de forma recorrente.</description>
    <inlineHelpText>Marque se o evento se repete em intervalos regulares.</inlineHelpText>
    <label>Recorrente?</label>
    <type>Checkbox</type>
</CustomField>