force-app/main/default/objects/Medical_Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>Quantidade de vagas restantes disponíveis no evento.</description>
    <formula>Max_Seats__c - People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculado automaticamente com base no total de vagas menos os participantes confirmados.</inlineHelpText>
    <label>Vagas Restantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>