force-app/main/default/objects/Medical_Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Data e hora de início do evento.</description>
    <inlineHelpText>Informe quando o evento terá início.</inlineHelpText>
    <label>Data/Hora de Início</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>