force-app/main/default/objects/Medical_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indica o estado atual do evento no seu ciclo de vida.</description>
    <inlineHelpText>Selecione o status atual do evento (ex.: Created, Published, In Progress, Completed, Postponed ou Cancelled).</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <label>Criado</label>
            </value>
            <value>
                <fullName>Published</fullName>
                <label>Publicado</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>Em Andamento</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <label>Adiado</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>