force-app/main/default/objects/Medical_Event__c/validationRules/Prevent_Location_When_Virtual.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Location_When_Virtual</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &quot;Virtual&quot;),
    NOT(ISBLANK(Location__c))
)</errorConditionFormula>
    <errorMessage>Eventos virtuais não podem ter localização.</errorMessage>
</ValidationRule>