force-app/main/default/objects/Medical_Event__c/validationRules/Require_Frequency_When_Recurring.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Frequency_When_Recurring</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Recurring__c = TRUE,
    ISBLANK(TEXT(Frequency__c))
)</errorConditionFormula>
    <errorMessage>Você deve preencher a frequência quando o evento for recorrente.</errorMessage>
</ValidationRule>