force-app/main/default/objects/Medical_Event__c/validationRules/Require_Location_When_InPerson.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Location_When_InPerson</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &quot;In-Person&quot;),
    ISBLANK(Location__c)
)</errorConditionFormula>
    <errorMessage>Eventos presenciais precisam de localização.</errorMessage>
</ValidationRule>