force-app/main/default/objects/Medical_Event__c/validationRules/Validate_End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date_Time__c &lt;= Start_Date_Time__c</errorConditionFormula>
    <errorMessage>A data/hora de término deve ser maior que a data/hora de início.</errorMessage>
</ValidationRule>